Fix iOS time input overflow in Scheduling section
Added input[type=time] to the existing CSS fix for iOS Safari
date/time inputs overflowing their containers.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -141,8 +141,9 @@
   }
 }
 
-/* Fix iOS date inputs overflowing containers */
+/* Fix iOS date/time inputs overflowing containers */
 input[type="date"],
+input[type="time"],
 input[type="datetime-local"] {
   -webkit-appearance: none;
   appearance: none;
